# re-facto

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  citation.cff  manage.py  pyproject.toml  requirements.txt
account/: urls.py
account/migrations/: 0001_initial.py  0002_alter_pulldetails_pull_id.py
account/models/: __init__.py  account.py  branch.py  configuration.py  pull_details.py  repository.py  source_configuration.py  target_configuration.py
account/proxies/: dashboard_fetch.py  github_account.py
account/serializers/: serializer.py
account/test/: __init__.py  test_account.py  test_authorization.py  test_branch.py  test_config.py  test_dashboard_fetch.py  test_pull_details.py  test_repository.py  test_source_configuration.py  test_target_configuration.py
account/views/github/: auth.py  config.py  dash_info.py
core/: settings.py  urls.py
core/middlewares/: __init__.py  error_reporting.py
core/models/: base.py
core/utils/: __init__.py  base_view.py  exceptions.py  requests.py
docs/: dependencies.md  deployment.md  scenarios.md
docs/code_smells/: README.md  Re-Facto_Smells.xlsx
docs/test_coverage/: README.md
service/: urls.py
service/models/base/: event.py
service/models/github/: bot.py  event.py  refactor.py
service/test/: __init__.py  test_bot.py
service/views/github/: event.py
static/refactor-ui/: .gitignore  package.json  tsconfig.json
static/refactor-ui/public/: index.html
static/refactor-ui/src/: App.tsx  README.md  global.css  index.tsx
static/refactor-ui/src/components/: ColorSchemeToggle.tsx  (+1 more)
(+22 files in other folders)
